# werewolf

./: .gitignore  CHANGELOG.md  README.md  TESTING.md  TRAINING_GUIDE.py  WerewolfGame.py  analyze_game_logs.py  demo_simple.py  pyproject.toml  requirements.txt  run_game.py  run_selfplay.py  run_tests.py
.github/workflows/: deploy.yml
.training/: sessions.json
.training/game_logs/: werewolf_game_20251028_160800_cfb7553b.txt  (+9 more)
doc/: FILES_REFERENCE.md  LEARNING_PROGRESSION_SUMMARY.md  README.md  SEER.md  VERIFIED_GAME_LOGS.md  VILLAGER.md  WEREWOLF.md  WITCH.md  index.html  index.md  seer_learning_analysis.md  seer_learning_analysis_5cases.md  temp.md  villager_learning_analysis.md  villager_learning_analysis_5cases.md  werewolf_learning_analysis.md  werewolf_learning_analysis_5cases.md  witch_learning_analysis.md  witch_learning_analysis_5cases.md
scripts/: organize_logs.py
tests/: README.md  __init__.py  test_actual_recovery.py  test_agents.py  test_json_recovery.py  test_learning_engine.py  test_orchestrator.py  test_seer_fix.py  test_werewolf_game.py  test_witch_logging_fix.py
visualization/: README.md  README_STATIC.md  app.py  generate_static_data.py  generate_static_site.py  parser.py  requirements.txt  serve_local.py  start.bat  start.sh  state_manager.py  test.py
visualization-vue/: .gitignore  QUICKSTART.md  README-Vue.md  README.md  doc.html  doc.md  index.html  package-lock.json  package.json  test-parser.js  vite.config.js
werewolf/: WerewolfGame.py  __init__.py  agents.py  config.py  learning_engine.py  orchestrator.py  werewolf_game.py
(+241 files in other folders)
