[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werewolf"
version = "0.1.0"
description = "A small Werewolf game package"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Zirui Zhang" } ]
dependencies = [
    "agentscope",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "datasets",
    "accelerate",
    "tqdm",
]

[tool.setuptools]
packages = ["werewolf"]

[tool.setuptools.package-data]
werewolf = ["*.py"]

