[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werewolf"
version = "0.1.0"
description = "A small Werewolf game package"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Zirui Zhang" } ]
dependencies = [
    "agentscope",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "datasets",
    "accelerate",
    "tqdm",
]

[tool.setuptools]
packages = ["werewolf"]

[tool.setuptools.package-data]
werewolf = ["*.py"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

